--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section id="contact" class="contact">
       <h2>우리 병원 로비 꽉 채우기</h2>
       <p>폼에 간단히 남겨주시면<br>지금 병원 상황부터 함께 확인해드릴게요</p>
-      <form action="https://formspree.io/f/xdkgrrve" method="POST">
-        <input type="text" name="name" placeholder="성함 및 직책 (예: ooo 병원장)" required />
+      <form action="https://formspree.io/f/your-form-id" method="POST">
+        <input type="text" name="name" placeholder="성함 및 직책 (예: 김현진 병원장)" required />
         <input type="text" name="hospital" placeholder="병원명 (예: 청담늘예쁨의원)" required />
         <input type="tel" name="phone" placeholder="연락처 (예: 010-1234-5678)" required />
         <input type="email" name="email" placeholder="이메일 (선택)" />
