--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <main class="container">
     <section class="hero">
       <div class="text-box">
-        <h1>결과 없는 광고는,<br>비용일 뿐입니다</h1>
-        <p>우리는 병원에 맞는 전략으로<br>성과로 이어지는 광고를 만듭니다</p>
+        <h1>결과 없는 광고는,<br>비용일 뿐입니다.</h1>
+        <p>우리는 병원에 맞는 전략으로<br>성과로 이어지는 광고를 만듭니다.</p>
         <a href="#contact" class="cta">병원 로비 꽉 채우기</a>
       </div>
     </section>
 
     <section class="keywords">
       <div class="centered">
-        <h2>병원 콘텐츠, 많다고 성과 나는 거 아닙니다</h2>
-        <p>우리는 '환자 내원'이라는 목적에 집중합니다</p>
+        <h2>병원 콘텐츠, 많다고 성과 나는 거 아닙니다.</h2>
+        <p>우리는 '환자 내원'이라는 목적에 집중합니다.</p>
         <div class="tags">
           <span>📊 전략</span>
           <span>✍️ 콘텐츠</span>
@@ -46,7 +46,7 @@
         </ul>
         <div class="cta-box">
           <h3>병원 로비 꽉 채우고 싶으시죠?</h3>
-          <p>예약, 유입, 콘텐츠, 광고<br>우리는 '내원'만 보고 설계합니다</p>
+          <p>예약, 유입, 콘텐츠, 광고<br>우리는 '내원'만 보고 설계합니다.</p>
           <a href="#contact" class="cta">병원 로비 채우는 전략 받아보기</a>
         </div>
       </div>
@@ -57,8 +57,8 @@
         <h2>우리 병원 로비 꽉 채우기</h2>
         <p>폼에 간단히 남겨주시면<br>지금 병원 상황부터 함께 확인해드릴게요</p>
         <form action="https://formspree.io/f/your-form-id" method="POST">
-          <input type="text" name="name" placeholder="성함 및 직책 (예: 김현진 병원장)" required />
-          <input type="text" name="hospital" placeholder="병원명 (예: 청담늘예쁨의원)" required />
+          <input type="text" name="name" placeholder="성함 및 직책 (예: ooo 병원장)" required />
+          <input type="text" name="hospital" placeholder="병원명 (예: 0000의원)" required />
           <input type="tel" name="phone" placeholder="연락처 (예: 010-1234-5678)" required />
           <input type="email" name="email" placeholder="이메일 (선택)" />
           <button type="submit">병원 로비 채우는 전략 받아보기</button>
