--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="form-box">
         <h2>우리 병원 로비 꽉 채우기</h2>
         <p>폼에 간단히 남겨주시면<br>지금 병원 상황부터 함께 확인해드릴게요</p>
-        <form action="https://formspree.io/f/your-form-id" method="POST">
+        <form action="https://formspree.io/f/xdkgrrve" method="POST">
           <input type="text" name="name" placeholder="성함 및 직책 (예: 김현진 병원장)" required />
           <input type="text" name="hospital" placeholder="병원명 (예: 청담늘예쁨의원)" required />
           <input type="tel" name="phone" placeholder="연락처 (예: 010-1234-5678)" required />
@@ -66,7 +66,7 @@
         <p class="privacy-consent">
           ※ 입력하신 정보는 상담 및 병원 맞춤 전략 제공을 위한 용도로만 사용되며, 외부에 공유되지 않습니다.  
           <br />개인정보 수집 및 이용에 동의합니다. 
-          (<a href="/privacy.html" target="_blank">개인정보처리방침 보기</a>)
+          (개인정보처리방침 보기)
         </p>
         <p class="note">* 병원 마케팅 전담팀이 직접 확인하고 24시간 이내 연락드립니다.</p>
       </div>
@@ -75,11 +75,34 @@
   <footer class="footer">
     <div class="footer-info">
       <p>상호: 주식회사 나봄 | 대표: 김현진 | 사업자등록번호: 560-87-02893</p>
-      <p>주소: 서울특별시 강남구 테헤란로 123, 9층 | 통신판매업신고번호: 제2025-서울강남-0000호</p>
+      <p>주소: 천안시 동남구 대흥로 228, 706호</p>
       <p>대표전화: 070-4022-0040 | 이메일: nabom0217@gmail.com</p>
-      <p><a href="/privacy.html" target="_blank">개인정보처리방침</a></p>
+      <p>개인정보처리방침</p>
       <p class="copyright">© 2025 주식회사 나봄. All rights reserved.</p>
     </div>
   </footer>
+
+<script>
+  const form = document.querySelector("form");
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const data = new FormData(form);
+    const response = await fetch(form.action, {
+      method: "POST",
+      body: data,
+      headers: {
+        Accept: "application/json"
+      }
+    });
+
+    if (response.ok) {
+      alert("문의가 성공적으로 접수되었습니다. 감사합니다!");
+      form.reset();
+    } else {
+      alert("오류가 발생했습니다. 다시 시도해주세요.");
+    }
+  });
+</script>
+
 </body>
 </html>
