--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p class="privacy-consent">
           ※ 입력하신 정보는 상담 및 병원 맞춤 전략 제공을 위한 용도로만 사용되며, 외부에 공유되지 않습니다.  
           <br />개인정보 수집 및 이용에 동의합니다. 
-          (개인정보처리방침 보기)
+         <a href="/privacy.html" style="color: inherit; text-decoration: none;">(개인정보처리방침)</a>
         </p>
         <p class="note">* 병원 마케팅 전담팀이 직접 확인하고 24시간 이내 연락드립니다.</p>
       </div>
@@ -77,7 +77,7 @@
       <p>상호: 주식회사 나봄 | 대표: 김현진 | 사업자등록번호: 560-87-02893</p>
       <p>주소: 천안시 동남구 대흥로 228, 706호</p>
       <p>대표전화: 070-4022-0040 | 이메일: nabom0217@gmail.com</p>
-      <p>개인정보처리방침</p>
+      <p><a href="/privacy.html" style="color: inherit; text-decoration: none;">개인정보처리방침</a></p>
       <p class="copyright">© 2025 주식회사 나봄. All rights reserved.</p>
     </div>
   </footer>
